@@ -128,6 +128,9 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\Common.c">
+		</File>
+		<File
 			RelativePath=".\win32\Utility.c">
 		</File>
 		<File
